# A2A_MCP

./: .dockerignore  .env  .env.automation.example  .env.example  .env.prod.example  .env.release.example  .env.runtime.mcp.example  .env.runtime.orchestrator.example  .env.runtime.rbac.example  .env.shared.global.example  .env.staging.example  .env.twin.example  .gitignore  .gitmessage  .gitmodules  .travis.yml  A2A_MCP.code-workspace  AGENTS.md  ARCHITECTURE.md  AVATAR_SYSTEM.md  COMMIT_EDITMSG  CONTRACT.md  ConsentVisualizer.tsx  DEPLOY.md  DEPLOYMENT_BOT.md  DEPLOYMENT_BOT_FINAL_SUMMARY.md  DEPLOYMENT_BOT_INTEGRATION.md  DEPLOYMENT_BOT_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.bot  Gemini.md  HANDOFF.md  INDEX.md  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  Makefile  PR_BODY.md  QUICKREF.md  (+96 more)
a2a_mcp/: .dockerignore  .gitignore  AGENTIC_CORE_STRUCTURE.md  AGENTS.md  Auditor_CLI.ipynb  CI_VALIDATION_REPORT.md  Dockerfile  GAME_ENGINE_INTEGRATION.md  IMPLEMENTATION_READINESS_REVIEW.md  INDEX.md  KERNEL_MODEL_SPEC.md  PR_PULLABLE_RUNBOOK.md  RELEASE_COMPLETE.txt  RUN_RESULTS.md  SPECS_AUDIT.md  SYSTEM_SPEC.md  Skills.md  UNIFIED_ADK.md  UNITY_MLOPS_SETUP.md  __init__.py  bootstrap.py  branches.txt  capsule.export.qubePatent.v1.request.json  capsule.patentDraft.qube.v1.json  capsule.selfie.dualroot.q.cici.v1.feedback.v1.json  client_token_pipe.py  debug_imports.py  docker-compose.release.yml  docker-compose.twin.yml  docker-compose.unified.yml  docker-compose.yml  embed_control_plane.py  event_store.py  event_store_deprecated.py  freeze_capsules.sh  full_test_result.txt  full_test_result10.txt  full_test_result7.txt  game_engine.py  mcp_config.json  (+18 more)
a2a_mcp/a2a_mcp/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .skill-lock.json  Dockerfile  Jenkinsfile  README.md  RELEASE_NOTES_v1.0.0-game-engine.md  TELEMETRY_SYSTEM.md  capsule.os.genesis.v1.json  capsule.scene.ethereal_wrap.v1.json  docker-compose.yml  full_test_result3.txt  full_test_result8.txt  manifest.json  mcp_token.py  package-lock.json  pnpm-workspace.yaml  pytest_path.txt  requirements.txt  runtime_mcp_server.py  test_catalog_result.txt  test_fail_k_final.txt  test_fail_k_utf8.txt  test_webhook_err3.txt  train_cici_vision.py
a2a_mcp/adaptco-core-orchestrator/: package.json
a2a_mcp/adaptco-previz/: jest.config.js  package-lock.json  package.json
a2a_mcp/agents/: __init__.py  architecture_agent.py  coder.py  gemini_agent.py  managing_agent.py  pinn_agent.py  tester.py
a2a_mcp/app/: app_logging.py  config.py  main.py  managing_agent.py  multi_client_api.py
a2a_mcp/artifacts/: cie_v1_smoke.metrics.jsonl
a2a_mcp/avatars/: __init__.py  avatar.py  registry.py  setup.py
a2a_mcp/blackmamba/: __init__.py  economics.py  enterprise_map.py  planner.py  preferences.py
a2a_mcp/capsule.ops.branch_s.v1/: Makefile
a2a_mcp/capsules/: capsule.anomaly.trace.v1.json  capsule.digest.semanticCFD.v1.json
a2a_mcp/codex_qernel/: capsules.py
a2a_mcp/context/: window.py
a2a_mcp/docs/: AVATAR_SYSTEM.md  FREE_CI_ALTERNATIVES.md  OPERATIONS.md  REALTIME_AGENT_CONFIGURATION_RUNBOOK.md  golden_capsule_test_plan_release_candidate.md  topology.md  triadic_backbone_visualization.md
a2a_mcp/examples/: freeze-dispatch.js
a2a_mcp/fieldengine-cfo-mcp/: AGENTS.md  README.md  package.json
a2a_mcp/fixtures/: snapshot.json.meta.sha256
a2a_mcp/frontend/: index.html
a2a_mcp/ghost-void/: Dockerfile  debug_qdrant_points.py  mcp_server.py  phase_space_tick.py  pyproject.toml  pyrightconfig.json  pytest_results.txt  requirements.txt  temp_gate_check_art-730fb48c.json  unity_scaffold.yaml
a2a_mcp/judge/: __init__.py  decision.py
a2a_mcp/manifests/: gct_plan_release_candidate_v1.yaml
a2a_mcp/migrations/: env.py
a2a_mcp/mlops/: README.md  __init__.py
a2a_mcp/models/: .gitignore
a2a_mcp/openapi/: openapi.yaml
a2a_mcp/orchestrator/: __init__.py  api.py  dot_product.py  fsm_persistence.py  intent_engine.py  judge_orchestrator.py  main.py  metrics.py  policy_composer.py  runtime_thread.py  stateflow.py  utils.py  verify_api.py  webhook.py
a2a_mcp/pipeline/: README.md  RELEASE.md  docker-compose.yml  replay_test.py
a2a_mcp/public/: zdf_report.json
a2a_mcp/rbac/: Dockerfile  rbac_service.py
a2a_mcp/runtime/: capsule.echo.scrollstream.v2.sha256  capsule.motion.ledger.v2.sha256
a2a_mcp/schemas/: __init__.py  action.ledger.append_receipt.result.v1.json  action_model.py  agent_registry.schema.json  cie_v1.audit_run.schema.json  database.py  gate.result.plan.release.candidate.v1.schema.json  prompt_inputs.py  runtime_event.py  runtime_scenario_envelope.schema.json  telemetry.py  world_model.py  zap_context.webhook.v1.json
a2a_mcp/scripts/: bootstrap.py  build_multimodal_rag_bundle.py  build_worldline_block.py  check_merge_conflicts.py  deploy-bot.sh  deploy.sh  generate-fossil-receipts.js  jcs_checksum_helper.py  knowledge_ingestion.py  migrate.sh  pr_preflight_check.sh  pre_pr_check.ps1  run_behavior_validator.sh  run_end_to_end_orchestration.py  run_receipt_validator.sh  sign_bindings.sh  smoke_mcp_endpoints.sh  start_codex_qernel.sh  telematics_agent_monitor.sh  test_arcstate_schema.py  ws_client.py
a2a_mcp/server/: index.js
a2a_mcp/specs/: judge_criteria.yaml  loader.py  mcp_3d_agent_execution.v1.reference.md  supra_specs.yaml
a2a_mcp/src/: multi_client_router.py  requests.py
a2a_mcp/tests/: prototype_manifold_call.py  qbus_gates.test.js  report.html  test_a2a_mcp.py  test_architecture_agent.py  test_avatar_token_shape.py  test_base44_standalone.py  test_canonical_json.py  test_coder_agent.py  test_dot_product.py  test_drift_gate.py  test_full_pipeline.py  test_gke_release.py  test_hybrid_chunking_pipeline.py  test_intent_engine.py  test_lora_harness.py  test_mcp_agents.py  test_mcp_core.py  test_mcp_core_tools.py  test_mcp_gateway_tools_call.py  test_mcp_runtime_bus.py  test_mcp_tooling_security.py  test_merge_model.py  test_mlops_unity_pipeline.py  test_multi_client_router.py  test_multimodal_worldline.py  test_oidc.py  test_oidc_startup.py  test_oidc_validation.py  test_paths.py  test_stateflow.py  (+12 more)
(+2346 files in other folders)
