[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-mcp"
version = "0.2.0"
description = "Multi-agent orchestrator with MCP tooling, stateflow FSM, and self-healing pipelines"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests",
    "jsonschema>=4.18.0,<5",
    "mcp[cli]",
    "fastmcp",
    "numpy>=1.24",
    "scipy",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
integrations = [
    "aiohttp>=3.8,<4",
    "pynacl>=1.5,<2",
    "google-generativeai",
    "pandas",
    "matplotlib",
]
auth = []

[project.scripts]
mcp-adk = "mcp_adk.cli:main"

[tool.setuptools.packages.find]
where = [".", "src"]
exclude = ["tests*", ".venv*", "node_modules*", "build*", "dist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = "-q --doctest-modules --ignore=tests/test_a2a_mcp.py --ignore=tests/test_canonical_json.py --ignore=tests/test_drift_gate.py --ignore=pipeline/replay_test.py"
