[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-mcp"
version = "0.2.0"
description = "Multi-agent orchestrator with MCP tooling, stateflow FSM, and self-healing pipelines"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "PyJWT",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests>=2.31.0",
    "jsonschema",
    "mcp[cli]",
    "numpy>=1.24",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
integrations = [
    "aiohttp",
    "pynacl",
    "google-generativeai",
    "pandas",
    "matplotlib",
]
# Deprecated compatibility alias; PyJWT is now a core dependency.
auth = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", ".", "ghost-void"]
addopts = "-q --doctest-modules --ignore=tests/test_a2a_mcp.py --ignore=tests/test_canonical_json.py --ignore=tests/test_drift_gate.py --ignore=pipeline/replay_test.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "a2a_mcp*",
    "app*",
    "orchestrator*",
    "rbac*",
    "schemas*",
    "agents*",
    "mcp_adk*",
    "core_orchestrator*",
    "drift_suite*",
    "integrations*",
    "prime_directive*",
]
exclude = [
    "tests*",
    "docs*",
    "deploy*",
    "ghost-void*",
    "qube*",
    "qube-forensic-console*",
    "qube_forensics*",
    "qube_moemodel_v1*",
    "qube_forensic_console*",
    "packages*",
    "skills*",
    "ui*",
    "web-pet-kernel*",
    "public*",
    "apps*",
    "tools*",
]

[tool.setuptools.package-data]
mcp_adk = [
    "contracts/*.json",
    "contracts/*.md",
    "artifact_schemas/*.json",
    "templates/python_agent/*",
    "templates/python_agent/handlers/*.py",
    "templates/ts_agent/*",
]

[project.scripts]
mcp-adk = "mcp_adk.cli:main"
