[project]
name = "a2a-mcp"
version = "0.2.0"
description = "Multi-agent orchestrator with MCP tooling, stateflow FSM, and self-healing pipelines"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests",
    "jsonschema",
    "mcp[cli]",
    "numpy>=1.24",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

dependencies = [
    "PyJWT",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = "-q --doctest-modules"
