[project]
name = "a2a-mcp"
version = "0.2.0"
description = "Multi-agent orchestrator with MCP tooling, stateflow FSM, and self-healing pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests",
    "jsonschema",
    "mcp[cli]",
    "croniter",
    "pyyaml",
    "aiohttp>=3.8,<4",
    "numpy>=1.24",
    "pynacl>=1.5,<2",
    "sentence-transformers",
    "qdrant-client",
    "torch",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
