[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-orchestrator"
version = "0.1.0"
description = "Event router that connects Discord parsers with Notion, Google Calendar, and Shopify sinks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18.0,<5",
    "pynacl>=1.5,<2",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
viz = ["matplotlib>=3.8,<4"]

[project.scripts]
core-orchestrator = "core_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
